k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blaster
  namespace: $(kubernetes-namespace)
  labels:
    project: selfservice
    department: devex
    app: blaster
    component: blaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blaster
  template:
    metadata:
      labels:
        app: blaster
        project: selfservice
        department: devex
    spec:
      containers:
        - name: auth-proxy
          image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/auth-proxy:$(Build.BuildId)
          ports:
            - containerPort: 3000
              name: web
          resources:
            requests:
              memory: "300Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
        - name: blaster
          image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/blaster:$(Build.BuildId)
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
