k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blaster
  namespace: $(kubernetes-namespace)
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: blaster
    project: selfservice
    department: devex
    component: blaster
    scrape-service-metrics: "true"
spec:
  ports:
    - name: metrics
      port: 80
      targetPort: web
    - name: echo
      port: 8080
      targetPort: echoweb
  selector:
    app: blaster
