k8s/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: blaster
  namespace: $(kubernetes-namespace)
spec:
  entryPoints: []
  routes:

  - kind: Rule
    match: Host(`internal.hellman.oxygen.dfds.cloud`) && PathPrefix(`/blaster`)
    middlewares:
    - name: blaster-internal
      namespace: $(kubernetes-namespace)
    priority: 0
    services:
    - kind: Service
      name: blaster
      namespace: $(kubernetes-namespace)
      port: 80

  - kind: Rule
    match: Host(`build.dfds.cloud`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: blaster
      namespace: $(kubernetes-namespace)
      port: 80

  - kind: Rule
    match: Host(`build.dfds.cloud`) && PathPrefix(`/v2`)
    middlewares: []
    priority: 2
    services:
    - kind: Service
      name: echo
      namespace: $(kubernetes-namespace)
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: blaster-internal
  namespace: $(kubernetes-namespace)
spec:
  stripPrefix:
    prefixes:
    - /blaster
